# ppai

./: .gitignore  .gitmodules  README.md  python-sandbox-plan.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/ch/brenzi/prettyprivateai/whisper/: WhisperQualityTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  privatemode_jni.c  whisper_jni.c
app/src/main/java/ch/brenzi/prettyprivateai/: MainActivity.kt  PrivatemodeApp.kt
app/src/main/java/ch/brenzi/prettyprivateai/data/local/: ChatStorage.kt  PreferencesManager.kt
app/src/main/java/ch/brenzi/prettyprivateai/data/model/: Chat.kt  ModelInfo.kt
app/src/main/java/ch/brenzi/prettyprivateai/data/remote/: PrivatemodeClient.kt  StartpageSearchClient.kt
app/src/main/java/ch/brenzi/prettyprivateai/data/repository/: ChatRepository.kt
app/src/main/java/ch/brenzi/prettyprivateai/proxy/: NativeProxy.kt  ProxyManager.kt
app/src/main/java/ch/brenzi/prettyprivateai/tts/: AudioPlayer.kt  TtsManager.kt
app/src/main/java/ch/brenzi/prettyprivateai/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/ch/brenzi/prettyprivateai/ui/components/: DrawerContent.kt
app/src/main/java/ch/brenzi/prettyprivateai/ui/navigation/: Navigation.kt
app/src/main/java/ch/brenzi/prettyprivateai/ui/security/: SecurityScreen.kt
app/src/main/java/ch/brenzi/prettyprivateai/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/ch/brenzi/prettyprivateai/ui/setup/: SetupScreen.kt
app/src/main/java/ch/brenzi/prettyprivateai/ui/theme/: Color.kt  Theme.kt  (+1 more)
app/src/main/java/ch/brenzi/prettyprivateai/util/: MarkdownRenderer.kt
app/src/main/java/ch/brenzi/prettyprivateai/whisper/: AudioDecoder.kt  AudioRecorder.kt  WhisperManager.kt  WhisperNative.kt
app/src/main/java/com/k2fsa/sherpa/onnx/: LibraryLoader.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ch/brenzi/prettyprivateai/: ApiRequestFormatTest.kt  SearchProbeTest.kt  StartpageSearchClientTest.kt  StreamingIntegrationTest.kt  TtsTest.kt  WhisperTranscriptionTest.kt
patches/: 0001-android-pass-dataDir-to-Go-for-env-setup.patch
scripts/: build-native.sh  build-sherpa-onnx.sh  test-whisper-quality.sh
tests/: whisper-native-e2e.sh
